# Morph

./: .clang-format  .gitignore  CMakeLists.txt  Graph.sln  Graph.vcxproj  Graph.vcxproj.filters  Morph.sln  Morph.vcxproj  README.md  linux_build.sh  win_build.bat
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Graphy.h  Morph.h  fragment.glsl  grid_fragment.glsl  grid_vertex.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
maths/: matrix.h
src/: Morph.c  Morph.h  graph.c  interactive.c  main.c  parser.c  parser.h  render_common.h  stb_truetype.h
src/shader/: aaline.fs  aaline.gs  aaline.vs  common_2D.fs  common_2D.vs
utility/: bmp.c  bmp.h
